crates/toml/tests/snapshots/invalid/inline-table/overwrite-10.stderr
TOML parse error at line 4, column 15
  |
4 | a = {b.a = 1, b = 2, b.c = 3}
  |               ^
duplicate key
